make dongo runner release quarantine enforceable
